--- a/client/components/Header/Header.module.css
+++ b/client/components/Header/Header.module.css
@@ -1,21 +1,20 @@
 .mainContainer {
     width: var(--w100);
     height: 10%;
-    background-color: var(--black-color);
+    background-color: var(--white-color);
     display: var(--flex);
     justify-content: space-between;
     align-items: var(--flex-center);
+    box-sizing: var(--border-box);
+    /*background-color: rgba(255, 255, 255, 0.8);*/
+    /*position: fixed;*/
+    /*top: 0;*/
+    /*left: 0;*/
+    /*backdrop-filter: blur(8px);*/
 }
 
 .nameContainer {
     padding-left: .5rem;
-}
-
-.name {
-    margin: var(--m0);
-    color: #fff;
-    font-size: 2.2rem;
-    letter-spacing: .1rem;
 }
 
 .nameSpan {
@@ -27,7 +26,59 @@
 }
 
 .menuIcon {
-    color: var(--white-color);
+    color: var(--black-color);
     font-size: 3rem;
-    transition: all 0.3s ease-in-out;
+}
+
+.logo {
+    margin: var(--m0);
+    color: var(--black-color);
+    font-size: 2.2rem;
+    letter-spacing: .1rem;
+}
+
+.logo span {
+    opacity: 0;
+    animation: typing 0.1s ease-in-out forwards;
+}
+
+.logo span:nth-child(1) {
+    animation-delay: 0.1s;
+}
+
+.logo span:nth-child(2) {
+    animation-delay: 0.2s;
+}
+
+.logo span:nth-child(3) {
+    animation-delay: 0.3s;
+}
+
+.logo span:nth-child(4) {
+    animation-delay: 0.4s;
+}
+
+.logo span:nth-child(5) {
+    animation-delay: 0.5s;
+}
+
+.logo span:nth-child(6) {
+    animation-delay: 0.6s;
+}
+
+.logo span:nth-child(7) {
+    animation-delay: 0.7s;
+}
+
+.logo span:nth-child(8) {
+    animation-delay: 1.1s;
+}
+
+@keyframes typing {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
