--- a/client/components/Header/Header.module.css
+++ b/client/components/Header/Header.module.css
@@ -1,16 +1,19 @@
 .mainContainer {
     width: var(--w100);
     height: 10%;
-    background-color: var(--white-color);
     display: var(--flex);
     justify-content: space-between;
     align-items: var(--flex-center);
     box-sizing: var(--border-box);
-    /*background-color: rgba(255, 255, 255, 0.8);*/
-    /*position: fixed;*/
-    /*top: 0;*/
-    /*left: 0;*/
-    /*backdrop-filter: blur(8px);*/
+    background-color: rgba(255, 255, 255, 0.2);
+    position: sticky;
+    top: 0;
+    left: 0;
+    backdrop-filter: blur(8px);
+}
+
+.border {
+    box-shadow: inset 0 -1px 0 0 #eaeaea;
 }
 
 .nameContainer {
